# tsm-app-linux

./: .gitignore  API.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: aur.yml  ci.yml  release.yml
docs/: architecture.md  backend.md  data.md  dependencies.md  frontend.md
packaging/: PKGBUILD  tsm-app.desktop
packaging/debian/: changelog  ci-depends  control  copyright  rules
packaging/rpm/: rpm-requires  tsm-app.spec
scripts/: build.sh  check_ssl.py  package_aur.sh  package_deb.sh  package_rpm.sh
tests/: conftest.py
tests/integration/: test_api_client.py  test_scheduler.py
tests/unit/: test_addon_writer.py  test_auction_cache.py  test_auth_service.py  test_backup_service.py  test_config_store.py  test_item_cache.py  test_lua_writer.py  test_saved_variables.py  test_wow_detector_service.py  test_wow_tooltip.py  test_wow_utils.py
tsm/: __init__.py  __main__.py  app.py  update_check.py
tsm/api/: client.py  types.py
tsm/core/: log_buffer.py  scheduler.py
tsm/core/models/: addon.py  auction.py  auth.py  config.py
tsm/core/services/: _zip_utils.py  addon_writer.py  auction.py  auth.py  backup.py  item_cache.py  updater.py  wow_detector.py
tsm/storage/: auction_cache.py  config_store.py  database.py  secrets.py
tsm/ui/: app_window.py
tsm/ui/components/: _wowhead_html.py  hover_button.py  progress.py  realm_row.py  status_bar.py  wow_tooltip.py
tsm/ui/styles/: theme.py  tsm_dark.qss
tsm/ui/viewmodels/: app_vm.py  realm_vm.py  settings_vm.py
tsm/ui/views/: _accounting_utils.py  _utils.py  accounting_export.py  addon_versions.py  backups.py  log_viewer.py  login.py  realm_data.py  settings.py
tsm/workers/: async_runner.py  bridge.py  jobs.py
tsm/wow/: accounts.py  detector.py  lua_writer.py  saved_variables.py  utils.py
