[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tsm-app"
dynamic = ["version"]
description = "TSM Desktop App for Linux - TradeSkillMaster auction data downloader"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "exceptionptr", url = "https://github.com/exceptionptr" }]
dependencies = [
    "PySide6>=6.6.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "apscheduler>=4.0.0a5,<5",
    "aiosqlite>=0.19.0",
    "keyring>=24.0.0",
    "structlog>=23.0.0",
    "tomli-w>=1.0.0",
    "PyYAML>=6.0",  # parse Lutris game config files for WoW path detection
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.2.0",
    "aioresponses>=0.7.6",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0",
    "hatch-vcs",
]

[project.urls]
Homepage = "https://github.com/exceptionptr/tsm-app-linux"
Repository = "https://github.com/exceptionptr/tsm-app-linux"
Issues = "https://github.com/exceptionptr/tsm-app-linux/issues"

[project.scripts]
tsm-app = "tsm.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "tsm/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["tsm"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# UI files and Qt-heavy modules: relax annotation requirements.
# Adding full PySide6 type signatures would dwarf the actual logic.
[[tool.mypy.overrides]]
module = [
    "tsm.ui.*",
    "tsm.workers.*",
    "tsm.wow.*",
    "tsm.core.services.backup",
    "tsm.core.services.wow_detector",
    "tsm.core.services.addon_writer",
    "tsm.core.services.updater",
    "tsm.app",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_any_generics = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
